tests/fixtures/positive/architecture/layer-dependency-violation/ui/src/main/kotlin/com/example/ui/LayerDependencyViolation.kt
package com.example.ui

import com.example.data.internal.InternalSessionStore
import com.example.domain.UserSession

class LayerDependencyViolation(
    private val store: InternalSessionStore,
) {
    fun currentUser(): UserSession? = store.currentUser()
}
