tests/fixtures/negative/architecture/layer-dependency-violation/ui/src/main/kotlin/com/example/ui/LayerDependencyViolation.kt
package com.example.ui

import com.example.domain.UserSessionReader

class LayerDependencyViolation(
    private val reader: UserSessionReader,
) {
    fun currentUserId(): String? = reader.currentUserId()
}
